[project]
name = "pipecat-phone-bot-example"
version = "0.1.0"
description = "Twilio phone bot example using Pipecat"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[cartesia,openai,silero,deepgram,websocket,runner]>=0.0.77",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]