[project]
name = "pipecat-phone-bot-example"
version = "0.1.0"
description = "Twilio phone bot example using Pipecat"
requires-python = ">=3.10"
dependencies = [
    "azure-cognitiveservices-speech>=1.46.0",
    "pipecat-ai[artesia,openai,silero,deepgram,websocket,runner]>=0.0.83",
    "pipecatcloud>=0.2.4",
    "twilio>=9.8.1",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
